--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,20 @@
+.counterFrame {
+    display: flex;
+    background-color: black;
+    border-radius: 10px;
+    width: 1150px;
+    border: 1px solid white;
+    padding: 50px;
+    margin: 20px;
+    box-sizing: content-box
+}
 
-/* 
+.counterDigit {
+    color: white;
+    font-size: 200;
+    border-radius: 10px;
+    border: 1px solid white;
+    padding: 50px;
+    margin: 20px;
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+}
